--- a/config/database.yml
+++ b/config/database.yml
@@ -4,19 +4,17 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  encoding: unicode
+  adapter: postgresql
+  username: shrunzzagwktdw
+  password: FvCoXWwNhW3gl-NZ4A1XmhVn4w
+  pool: 10
+  port: 5432
+  host: ec2-54-204-45-126.compute-1.amazonaws.com
+  database: d1tba179du8g8f
+  min_messages: WARNING
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+
 
 production:
   encoding: unicode
