--- a/config/database.yml
+++ b/config/database.yml
@@ -8,20 +8,29 @@ development:
   adapter: postgresql
   username: shrunzzagwktdw
   password: FvCoXWwNhW3gl-NZ4A1XmhVn4w
-  pool: 10
+  pool: 5
   port: 5432
   host: ec2-54-204-45-126.compute-1.amazonaws.com
   database: d1tba179du8g8f
   min_messages: WARNING
 
-
+test:
+  encoding: unicode
+  adapter: postgresql
+  username: shrunzzagwktdw
+  password: FvCoXWwNhW3gl-NZ4A1XmhVn4w
+  pool: 5
+  port: 5432
+  host: ec2-54-204-45-126.compute-1.amazonaws.com
+  database: d1tba179du8g8f
+  min_messages: WARNING
 
 production:
   encoding: unicode
   adapter: postgresql
   username: shrunzzagwktdw
   password: FvCoXWwNhW3gl-NZ4A1XmhVn4w
-  pool: 10
+  pool: 5
   port: 5432
   host: ec2-54-204-45-126.compute-1.amazonaws.com
   database: d1tba179du8g8f
